--- a/warhammer-battle-helper-front/Dockerfile
+++ b/warhammer-battle-helper-front/Dockerfile
@@ -4,13 +4,13 @@ LABEL authors="mateuszprocner"
 WORKDIR /app
 
 # Copy package.json and package-lock.json
-COPY ./src/package*.json ./
+COPY ./package*.json ./
 
 # Install dependencies
 RUN npm install
 
 # Copy the rest of your application files
-COPY ./src .
+COPY . .
 
 
 CMD [ "npm", "start"]
