--- a/warhammer-battle-helper-backend/Dockerfile
+++ b/warhammer-battle-helper-backend/Dockerfile
@@ -1,16 +1,20 @@
-FROM golang:1.24-alpine3.22
-LABEL authors="mateuszprocner"
+FROM golang:1.25-alpine3.22
 
 WORKDIR /app
 
-COPY ./src ./
-
+# Dependencies (go.mod/go.sum live in src/)
+COPY ./src/go.mod ./src/go.sum ./
 RUN go mod download
 
+# Hot reload & swagger tools
+RUN go install github.com/air-verse/air@latest
 RUN go install github.com/swaggo/swag/cmd/swag@latest
-RUN swag init
 
-RUN go build -o /battle-helper
+# Copy config files (if any) used by air
+COPY ./src/.air.toml ./
 
+# Create data dir for SQLite (mounted as volume)
+RUN mkdir -p /app/data
 
-CMD [ "/battle-helper" ]
+# Default command (source is mounted at runtime)
+CMD ["air"]
